@@ -1,6 +1,6 @@
 {
   "name": "simp-tcpwrappers",
-  "version": "6.0.4",
+  "version": "6.1.0",
   "author": "SIMP Team",
   "summary": "manages /etc/hosts.allow (/etc/hosts.deny is ALL:ALL by default)",
   "license": "Apache-2.0",
