@@ -1,5 +1,8 @@
-* Fri Aug 24 2018 Nick Miller <nick.miller@onypoint.com> - 6.0.4-0
+* Fri Aug 24 2018 Nick Miller <nick.miller@onypoint.com> - 6.1.0-0
 - Add support for Puppet 5 and OEL
+- Added $package_ensure parameter
+  - Changed the package from 'latest' to 'installed'
+  - It will also respect `simp_options::package_ensure`
 
 * Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.3-0
 - Update upperbound on puppetlabs/concat version to < 5.0.0
